[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bookcart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Event.gd" type="Script" id=2]
[ext_resource path="res://CharacterNameLink.tres" type="DynamicFont" id=3]
[ext_resource path="res://CharacterDate.tres" type="DynamicFont" id=4]

[node name="Event" type="Node2D"]
script = ExtResource( 2 )

[node name="Bookcart" parent="." instance=ExtResource( 1 )]

[node name="DateLabel" type="Label" parent="."]
margin_left = -88.9933
margin_top = -56.7211
margin_right = 89.0067
margin_bottom = -27.7211
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "00/00/0000 - 00/00/0000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLink" type="LinkButton" parent="."]
margin_left = -23.0
margin_top = -79.7605
margin_right = 23.0
margin_bottom = -50.7605
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Event Name"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NameLink" to="." method="handleClick"]
